wp-content/plugins/academy-africa/includes/assets/css/header.css
.nav {
    display: flex;
    width: 1440px;
    height: 92px;
    padding: 20px 40px;
    justify-content: center;
    align-items: center;
    gap: 58px;
    flex-shrink: 0;
    background: #0C1A81;
}

.nav .logo-section {
    display: flex;
    align-items: center;
    gap: 20px;
}

.nav .logo-section .logo {
    width: 52px;
    height: 52px;
}

.nav .logo-section .page-title {
    color: #FFFFFF;
    font-family: Open Sans;
    font-size: 18px;
    font-style: normal;
    font-weight: 600;
    line-height: 28px;
}

.navigation-section {
    display: flex;
    width: 1032px;
    min-width: 880px;
    max-width: 1032px;
    justify-content: flex-end;
    align-items: center;
    gap: 100px;
    flex-shrink: 0;
}

.navigation-section .search-bar {
    display: flex;
    align-items: center;
    flex: 1 0 0;
}

.navigation-section .search-bar .search-input {
    display: flex;
    padding: 0px 9px;
    align-items: flex-start;
    gap: 10px;
    flex: 1 0 0;
    align-self: stretch;
    border: none;
    outline: none;
}

.navigation-section .search-bar .search-input::placeholder {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1 0 0;
    align-self: stretch;
    color: var(#767A94, #767A94);
    font-family: Open Sans;
    font-size: 14px;
    font-style: italic;
    font-weight: 400;
    line-height: 18px;
}

.navigation-section .search-bar .search-button {
    display: flex;
    padding: 12px 16px;
    justify-content: center;
    align-items: center;
    gap: 8px;
    border: none;
    background: var(#EFF0FD, #EFF0FD);
}

.navigation-section .search-bar .search-button img {
    width: 16px;
    height: 16px;
}

.navigation-section .navigation-links {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 10px;
    height: 43px;
    overflow: hidden;
}

.navigation-section .navigation-links a {
    text-decoration: none;
}

.navigation-section .navigation-links .nav-link {
    display: flex;
    padding: 10px;
    justify-content: center;
    align-items: center;
    gap: 6px;
    background: #0C1A81;
    text-decoration: none;
}

.navigation-section .navigation-links .nav-link .nav-link-text {
    color: #F7F9FD;
    font-family: Open Sans;
    font-size: 18px;
    font-style: normal;
    font-weight: 600;
    line-height: 21.6px;
}

.navigation-section .navigation-links .nav-link .arrow-down {
    width: 16px;
    height: 16px;
    color: #fff;
}

.navigation-section .navigation-links .nav-link.login-button {
    display: flex;
    padding: 12px 16px;
    justify-content: center;
    align-items: center;
    gap: 8px;
    background: #EFF0FD;
}

.navigation-section .navigation-links .nav-link.login-button .nav-link-text {
    color: #0C1A81;
    font-family: Open Sans;
    font-size: 16px;
    font-style: normal;
    font-weight: 800;
    line-height: 19px;
    letter-spacing: 1.6px;
    text-transform: uppercase;
}

.navigation-section .navigation-links .nav-link.lang-button {
    display: flex;
    max-height: 42px;
    padding: 10px;
    justify-content: center;
    align-items: center;
    gap: 6px;
    background: #0C1A81;
}

.navigation-section .navigation-links .nav-link.lang-button .language-icon {
    width: 24px;
    height: 24px;
}

.navigation-section .navigation-links .nav-link.lang-button .arrow-down {
    width: 16px;
    height: 16px;
}

.navigation-section .navigation-links .nav-link.lang-button .icon {
    color: #fff;
}

